[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zga"
version = "0.1.1"
authors = [
  { name="Aleksei Korzhenkov ", email="oscypek@ya.ru" }
]
description = "Prokaryotic genome assembly and annotation pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

dependencies = [
  "biopython"
]


[project.urls]
Homepage = "https://github.com/laxeye/zga/"

[project.scripts]
zga = "zga.zga:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"zga" = ["data/*"]}
